--- a/www/-/s/style-mobile.css
+++ b/www/-/s/style-mobile.css
@@ -368,9 +368,9 @@ sub {
 }
 
 .content table {
-    float: none !important;
-    margin-left: 0 !important;
-    margin-right: 0 !important
+    float: none important;
+    margin-left: 0 important;
+    margin-right: 0 important
 }
 
     .content table.infobox {
@@ -3029,32 +3029,6 @@ sub, sup {
     display: none !important
 }
 
-.content table {
-    float: none !important;
-    margin-left: 0 !important;
-    margin-right: 0 !important
-}
-
-    .content table.infobox {
-        font-size: 90%;
-        position: relative;
-        border: 0;
-        margin-bottom: 2em;
-        text-align: left;
-        background-color: #f8f9fa
-    }
-
-        .content table.infobox th, .content table.infobox td {
-            vertical-align: top;
-            border: 0;
-            border-bottom: 1px solid #dddddd;
-            padding: 0.2em
-        }
-
-        .content table.infobox tr:last-child th, .content table.infobox tr:last-child td {
-            border: 0
-        }
-
 #filetoc, .mw-editsection {
     display: none
 }
@@ -3291,11 +3265,11 @@ sub, sup {
 
 @media all and (min-width:720px) {
     table.infobox, table.sistersitebox {
-        margin: 0.5em 0 1em 35px !important;
+        margin: 0.5em 0 1em 35px;
         max-width: 320px;
-        width: auto !important;
-        float: right !important;
-        clear: right !important;
+        width: auto;
+        float: right;
+        clear: right;
         z-index: 1;
     }
 
@@ -3845,7 +3819,7 @@ div.bandeau-section {
 
     table.infobox_v2, .infobox_v3 {
         clear: right;
-        float: right !important;
+        float: right;
         margin: 0 0 0.5em 1em
     }
 }
@@ -5550,8 +5524,8 @@ h3 .mw-headline {
 
     .qb.qbRight, .infobox, .infobox_v2, .infobox_v3, .qbRightDiv {
         clear: right;
-        float: right !important;
-        margin: 0 0 0.5em 1em !important;
+        float: right;
+        margin: 0 0 0.5em 1em;
         max-width: 320px;
     }
 }
